--- a/src/app/drafts/opponent-overview/opponent-score/opponent-score.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-score/opponent-score.component.scss
@@ -293,7 +293,7 @@
                 background-color: pdz-color(scale-negative-2);
               }
               &:disabled {
-                background-color: pdz-color(disabled-surface);
+                background-color: pdz-color(surface-disabled);
               }
             }
             mat-icon {
