--- a/src/styles/pdz-themes/_shiny.scss
+++ b/src/styles/pdz-themes/_shiny.scss
@@ -89,8 +89,8 @@ $theme: (
     on-info-container: "blue-950",
 
     // Disabled State
-    disabled-surface: "gray-200",
-    on-disabled-surface: "gray-500",
+    surface-disabled: "gray-200",
+    on-surface-disabled: "gray-500",
 
     // Inverse Colors
     surface-inverse: "gray-900",
@@ -240,8 +240,8 @@ $theme: (
     info-container: "blue-950",
     on-info-container: "blue-200",
 
-    disabled-surface: "gray-800",
-    on-disabled-surface: "gray-600",
+    surface-disabled: "gray-800",
+    on-surface-disabled: "gray-600",
 
     surface-inverse: "gray-100",
     on-surface-inverse: "gray-900",
