--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -25,13 +25,13 @@ $fonts: (
 );
 
 $font-size: (
-  xxs: 0.5rem,
+  2xs: 0.5rem,
   xs: 0.75rem,
   sm: 0.9rem,
   md: 1rem,
   lg: 1.2rem,
   xl: 1.5rem,
-  xxl: 2rem,
+  2xl: 2rem,
 );
 
 $font-weight: (
@@ -39,11 +39,11 @@ $font-weight: (
 );
 
 $line-height: (
-  xxs: 0.5rem,
+  2xs: 0.5rem,
   xs: 0.75rem,
   sm: 0.9rem,
   md: 1rem,
   lg: 1.2rem,
   xl: 1.5rem,
-  xxl: 2rem,
+  2xl: 2rem,
 );
