--- a/src/styles/mixins/_buttons.scss
+++ b/src/styles/mixins/_buttons.scss
@@ -142,6 +142,46 @@ $icon-button-defaults: (
   @include icon-button($config);
 }
 
+@mixin float-button($overrides: ()) {
+  position: sticky;
+  bottom: var(--pdz-space-lg);
+  margin-left: auto;
+  margin-right: var(--pdz-space-lg);
+  width: fit-content;
+  height: fit-content;
+  z-index: 10000;
+  overflow: visible;
+  mat-icon {
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    max-height: fit-content;
+    max-width: fit-content;
+    font-size: 2rem;
+  }
+
+  button {
+    background-color: pdz-color(menu-container);
+    padding: var(--pdz-space-md);
+    border-radius: var(--pdz-shape-corner-full);
+    box-shadow: var(--pdz-level-3);
+    border: 1px solid pdz-color(menu-container-low);
+    color: pdz-color(on-menu-container);
+    transition: all 0.2s ease-in-out;
+    &:hover:not(:disabled) {
+      box-shadow: var(--pdz-level-4);
+      background-color: pdz-color(menu-container-hover);
+      border: 1px solid pdz-color(menu-border);
+    }
+
+    &:disabled {
+      background-color: pdz-color(surface-disabled);
+      color: pdz-color(on-surface-disabled);
+      border-width: 0;
+    }
+  }
+}
+
 @mixin float-buttons($overrides: ()) {
   position: sticky;
   bottom: var(--pdz-space-lg);
