--- a/src/app/tools/set-analyzer/set-analyzer.component.html
+++ b/src/app/tools/set-analyzer/set-analyzer.component.html
@@ -2,10 +2,10 @@
   <div
     class="sm:w-80 md:w-96 lg:w-128 xl:w-160 2xl:w-192 h-full border-2 p-2 rounded-lg"
   >
-    <teambuilder-pokemon
+    <pdz-teambuilder-core
       (builderSet)="pokemonSet = $event"
       [showBoosts]="true"
-    ></teambuilder-pokemon>
+    ></pdz-teambuilder-core>
   </div>
   <div class="overflow-y-auto h-full border-2 p-1 rounded-lg">
     <table
