--- a/src/app/tools/teambuilder/teambuilder.component.html
+++ b/src/app/tools/teambuilder/teambuilder.component.html
@@ -1,1 +1,8 @@
-<teambuilder-pokemon></teambuilder-pokemon>
+<div class="space-x-2">
+  <ruleset-select classList="max-w-96" [(ngModel)]="ruleset"></ruleset-select>
+  <format-select classList="max-w-96" [(ngModel)]="format"></format-select>
+</div>
+<pdz-teambuilder-core
+  [ruleset]="ruleset"
+  [format]="format"
+></pdz-teambuilder-core>
